--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install django-ckeditor --upgrade
+        pip install embed_video --upgrade 
         pip install -r requirements.txt
     - name: Run Tests'
       run: 
