--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install django-ckeditor --upgrade
-        pip install embed_video --upgrade 
+        pip install embed_video
         pip install -r requirements.txt
     - name: Run Tests'
       run: 
