--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -12,7 +12,7 @@ name: Publish Docker image
 on:
   push:
     branches: [ master ]
-  pull-request:
+  pull_request:
     branches: [ master ] 
 
 jobs:
