--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,12 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: docker login
-      env:
-       DOCKER_USER: ${{secrets.DOCKER_USER}}
-       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run:
-       docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - name: Publish Docker
+      uses: docker/build-push-action@v3
+      with:
+        username: ${{secrets.DOCKER_USERNAME}}
+        password: ${{secrets.DOCKER_PASSWORD}}
+        repository: goki88/kiii_proekt
+        tags: latest, ${{ github.run_humber}}
     - name: Build the Docker image    
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     - name: Docker Push 
