--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,5 @@ jobs:
     - name: Publish Docker
       uses: docker/build-push-action@v3
       with:
-        username: ${{secrets.DOCKER_USERNAME}}
-        password: ${{secrets.DOCKER_PASSWORD}}
-        repository: goki88/kiii_proekt
+        push: true
         tags: latest, ${{ github.run_humber}}
