--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,9 +19,9 @@ jobs:
        DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
        DOCKER_PASSWORD: ${{secrets.DOCKER_PASWORD}}
       run:
-       docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+       docker login -u $DOCKER_USER --password $DOCKER_PASSWORD
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag chamodshehanka/node-test:$(date +%s)
 
     - name: Docker Push 
-      run: docker push ${{secrets.DOCKER_USER}}/kiii_proekt
+      run: docker push ${{secrets.DOCKER_USERNAME}}/kiii_proekt
