--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,12 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: docker login
-      env:
-       DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
-       DOCKER_PASSWORD: ${{secrets.DOCKER_PASWORD}}
-      run:
-       docker login -u $DOCKER_USER -p ${{secrets.DOCKER_PASWORD}}
+    - name: Docker Login
+    - uses: docker/login-action@v2
+      with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag chamodshehanka/node-test:$(date +%s)
 
