--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,4 +40,4 @@ jobs:
       uses: addnab/docker-run-action@v3
       with:
         image: test-image:latest
-        run: docker run test-image
+        run: docker run test-image:latest
